@@ -30,6 +30,7 @@
     <java.corba.patch.jar>${project.build.directory}/dependency/${java.corba.patch.name}-${project.version}.jar</java.corba.patch.jar>
     <idlj.jdk9.args/>
     <jacorb.jdk9.args/>
+    <surefireArgLine/>
   </properties>
 
   <build>
@@ -332,7 +333,7 @@
                   <goal>test</goal>
                 </goals>
                 <configuration>
-                  <argLine>${jacorb.jdk9.args}</argLine>
+                  <argLine>@{surefireArgLine} -Djdk.attach.allowAttachSelf=true ${jacorb.jdk9.args}</argLine>
                   <reportsDirectory>${project.build.directory}/jacorb-surefire-reports</reportsDirectory>
                   <systemProperties combine.children="append"/>
                   <excludes>
@@ -486,7 +487,7 @@
                   <goal>test</goal>
                 </goals>
                 <configuration>
-                  <argLine>${idlj.jdk9.args}</argLine>
+                  <argLine>@{surefireArgLine} -Djdk.attach.allowAttachSelf=true ${idlj.jdk9.args}</argLine>
                   <reportsDirectory>${project.build.directory}/idlj-surefire-reports</reportsDirectory>
                   <systemProperties combine.children="append" />
                   <excludes>
@@ -634,7 +635,7 @@
                   <goal>test</goal>
                 </goals>
                 <configuration>
-                  <argLine>${idlj.jdk9.args} ${idlj.boot.args}</argLine>
+                  <argLine>@{surefireArgLine} -Djdk.attach.allowAttachSelf=true ${idlj.jdk9.args} ${idlj.boot.args}</argLine>
                   <systemProperties combine.children="append" />
                   <excludes>
                     <exclude>**/common/**</exclude>
